--- a/cracklib/HISTORY
+++ b/cracklib/HISTORY
@@ -21,6 +21,10 @@ following modifications have been made:
  * Close the dictionary after each password lookup.
  * Set hidden visibility on all CrackLib symbols.
  * Close the wfp file handle on PWClose if it's open.
+ * Applied various patches from distributions for security vulnerabilities.
+
+See the leading comments in each source file for a more detailed timeline
+and list of changes.
 
 Below is the original changelog for CrackLib:
 
